Отказ от репутации, защита по IP, дефолтная репутация, стандартное кол-во репутации, возможность отключить +1 и -1 репутацию одному и тому же игроку, мб ещё что